# yeahub-test-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.ru.md  README.md  conftest.py  constants.py  linter_req.toml  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  integration.yml
api/: api_manager.py  auth_api.py  subscriptions_api.py  user_api.py
constants/: constants.py  currency_code.py  roles.py
custom_requester/: custom_requester.py
entities/: user.py
generators/: data_generator.py
mail/: exceptions.py  mail_client.py  models.py  parsers.py
models/: auth_model.py  base_model.py  refresh_token_response_model.py  user_response_model.py
models/Subscriptions/: model_data_payment.py  model_subscription.py  model_user_subsriptions.py
pages/auth/: forgot_password_page.py  login_page.py  password_recovery_page.py  register_page.py
pages/interview/: interview_page.py  onboarding_modal.py
pages/layout/: __init__.py  user_menu.py
pages/payment/: tbank_payment_page.py
pages/settings/: __init__.py  change_password_page.py  delete_account_modal.py  settings_page.py
payloads/: auth_payloads.py  card_payload.py  subscription_rates.py
resources/: mail_creds.py  user_creds.py
tests/api/: test_get_auth_logout_yeahub.py  test_get_auth_profile_yeahub.py  test_get_auth_refresh_yeahub.py  test_get_auth_send_reset_pass_yeahube.py  test_get_auth_verify_email_yeahub.py  test_get_send_verification_email_yeahub.py  (+7 more)
utils/: data_generator.py  decorators.py  helpers.py
(+28 files in other folders)
